<resources>
    <string name="app_name">Flight Booking</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="loading">Đang tải ...</string>
    <string name="no_internet_connection">Không có kết nối mạng.</string>
    <string name="connection_timeout">Không tìm thấy máy chủ. Vui lòng thử lại sau</string>


    <string name="facebook_app_id">480629078811764</string>

    <!--Fight Booking String-->
    <string name="search_fight">Tìm chuyến bay</string>
    <string name="search_fight_cap">TÌM CHUYẾN BAY</string>
    <string name="one_way">Một chiều</string>
    <string name="round_trip">Khứ hồi</string>

    <string name="place_from">Điểm đi</string>
    <string name="place_to">Điểm đến</string>

    <string name="time_go">Giờ đi</string>
    <string name="time_back">Giờ về</string>

    <string name="adult">Người lớn(12+)</string>
    <string name="child">Trẻ em(2-11)</string>
    <string name="infant">Sơ sinh(0-1)</string>

    <string name="next">&#9668;</string>
    <string name="previous">&#9658;</string>

    <string name="choose_airport">Chọn sân bay</string>

    <string name="international">QUỐC TẾ</string>
    <string name="south">MIỀN NAM</string>
    <string name="north">MIỀN BẮC</string>
    <string name="middle">MIỀN TRUNG</string>
    <string name="codeOrName">Mã hoặc tên thành phố</string>

    <string name="way_go">CHIỀU ĐI</string>
    <string name="way_back">CHIỀU VỀ</string>
    <string name="brief">TÓM TẮT</string>
    <string name="next_page">TIẾP TỤC</string>
    <string name="choose_time">Chọn thời gian bay</string>

    <string name="ticket_type_normal">Hạng vé rẻ</string>
    <string name="ticket_type_vip">Hạng thương gia</string>

    <string name="choose_time_go">Chọn ngày đi</string>
    <string name="choose_time_back">Chọn ngày về</string>

    <string name="code_flight">SỐ HIỆU</string>
    <string name="time_flight">HÀNH TRÌNH</string>
    <string name="price_flight">GIÁ VÉ</string>
    <string name="choose">CHỌN</string>
    <string name="time_go_must_be_less_than_time_back">Ngày đi không được lớn hơn ngày về</string>
    <string name="time_back_must_be_over_than_time_go">Ngày về không được nhỏ hơn ngày đi</string>
    <string name="sort">SẮP XẾP</string>
    <string name="time">Theo thời gian</string>
    <string name="price">Theo giá</string>
    <string name="filter">CHỌN LỌC</string>
    <string name="content_desc"></string>

    <string name="custommer_info">Thông tin khách hàng</string>
    <string name="custommer_desc">Chúng tôi cần thu thập thông tin hành khách cho bạn và cho bất cứ ai đi cùng với bạn. Các tên mà bạn cung cấp phải khớp với các tên trên hộ chiếu của hành khách (đối với đi quốc tế) hoặc các tờ các nhân khác (đi nội địa, ví dụ chứng minh thư, giấy phép lái xe), và các giấy tờ này phải được xuất trình khi làm thủ tục check-in.</string>
    <string name="custommer_need_to_be_enter">trường bắt buộc phải nhập thông tin</string>
    <string name="custommer_title">Hành khách: </string>
    <string name="custommer_gender">Giới tính: </string>
    <string name="custommer_name">Họ và tên: </string>
    <string name="custommer_go">Hành lý đi: </string>
    <string name="custommer_back">Hành lý về: </string>
    <string name="custommer_finish">HOÀN TẤT</string>

    <string name="persional_info">Thông tin cá nhân</string>
    <string name="persional_desc">Vui lòng cung cấp chi tiết liên hệ của bạn bên dưới. Chúng tôi có thể cần liên hệ với bạn nếu như có các thay đổi về chuyến bay.</string>
    <string name="persional_name">Họ và tên</string>
    <string name="persional_email">Email</string>
    <string name="persional_phone">Điện thoại</string>
    <string name="persional_address">Địa chỉ</string>
    <string name="persional_special_req">Yêu cầu đặc biệt</string>


    <!--Confirm ticket info-->
    <string name="title_info">Thông tin đơn hàng</string>
    <string name="custommer_code">Mã đơn hàng:</string>
    <string name="way_to_pay">Hình thức thanh toán:</string>
    <string name="status">Tình trạng:</string>
    <string name="deadline_to_pay">Hạn thanh toán:</string>
    <string name="brief_ticket">Tóm tắt vé:</string>
    <string name="keep_booking">TIẾP TỤC ĐẶT VÉ</string>

    <!--Hotline booking-->
    <string name="title_hotline_booking">Hotline đặt vé</string>

    <!--Get Promotion-->
    <string name="title_get_promotion">Khuyến mãi</string>
    <string name="title_like_desc">Hãy ấn \"like\" và \"+1\" để nhận khuyến mãi</string>

    <!-- Manage Booking Ticket-->
    <string name="title_manage_booking_ticket">Quản lý vé</string>

    <!-- List news-->
    <string name="title_list_news">Tin tức</string>

    <!-- About us-->
    <string name="title_about_us">Về chúng tôi</string>

    <!--Other-->
    <string name="please_choose_go_ticket">Vui lòng chọn vé lượt đi</string>
    <string name="please_choose_back_ticket">Vui lòng chọn vé lượt về</string>
    <string name="go_way">Chuyến đi</string>
    <string name="back_way">Chuyến về</string>

    <string name="please_enter_full_name_passenger">Vui lòng nhập đầy đủ họ tên hành khách</string>

    <string name="please_enter_full_name_contact_guy">Vui lòng nhập họ tên người liên hệ</string>
    <string name="please_enter_email_contact_guy">Vui lòng nhập email liên hệ</string>
    <string name="email_wrong_format">Email sai định dạng</string>
    <string name="please_enter_phone_contact_guy">Vui lòng nhập số điện thoại liên hệ</string>
    <string name="phone_wrong_format">Số điện thoai sai định dạng</string>
    <string name="please_enter_address_contact_guy">Vui lòng nhập địa chỉ người liên hệ</string>


    <string-array name="dayOfWeek">
        <item>CN</item>
        <item>Thứ 2</item>
        <item>Thứ 3</item>
        <item>Thứ 4</item>
        <item>Thứ 5</item>
        <item>Thứ 6</item>
        <item>Thứ 7</item>
    </string-array>

    <!--Local airport-->
    <string-array name="airport_name">
        <item>Hồ Chí Minh</item>
        <item>Cần Thơ</item>
        <item>Côn Đảo</item>
        <item>Phú Quốc</item>
        <item>Rạch Giá</item>
        <item>Cà Mau</item>

        <item>Hà Nội</item>
        <item>Hải Phòng</item>
        <item>Điện Biên</item>

        <item>Đà Nẵng</item>
        <item>Thanh Hoá</item>
        <item>Vinh</item>
        <item>Huế</item>
        <item>Đồng Hới</item>
        <item>Chu Lai</item>
        <item>Quy Nhơn</item>
        <item>Tuy Hoà</item>
        <item>Nha Trang</item>
        <item>Pleiku</item>
        <item>Buôn Mê Thuộc</item>
        <item>Đà Lạc</item>

    </string-array>

    <string-array name="airport_code">
        <item>SGN</item>
        <item>VCA</item>
        <item>VCS</item>
        <item>PQC</item>
        <item>VKG</item>
        <item>CAH</item>

        <item>HAN</item>
        <item>HPH</item>
        <item>DIN</item>

        <item>DAD</item>
        <item>THD</item>
        <item>VII</item>
        <item>HUI</item>
        <item>VDH</item>
        <item>VCL</item>
        <item>UIH</item>
        <item>TBB</item>
        <item>CXR</item>
        <item>PXU</item>
        <item>BMV</item>
        <item>DLI</item>


    </string-array>

</resources>
