<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fb824e"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="30dp">

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_margin="5dp"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_app"
        android:visibility="invisible" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/code_flight"
        android:textColor="#fff" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/time_flight"
        android:textColor="#fff" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/price_flight"
        android:textColor="#fff" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/choose"
        android:textColor="#fff" />

</LinearLayout>
