<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingTop="10dp">

    <Button
        android:id="@+id/btPrev"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="#ebedec"
        android:text="@string/next"
        android:textColor="@color/homeTextColor"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTicketType"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#ebedec"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/ticket_type_normal"
        android:textColor="@color/homeTextColor"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btNext"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:background="#ebedec"
        android:text="@string/previous"
        android:textColor="@color/homeTextColor"
        android:textSize="25sp"
        android:textStyle="bold" />

</LinearLayout>
