<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/actionbar"
        layout="@layout/layout_actionbar_normal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/actionbar"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff">


            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fb824e"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/persional_desc"
                android:textColor="#fff"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDesc"
                android:layout_margin="20dp"
                android:background="#fff"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/persional_name"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_edittext_persional_info"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/persional_email"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_edittext_persional_info"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/persional_phone"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_edittext_persional_info"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/persional_address"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_edittext_persional_info"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/persional_special_req"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etReq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_edittext_persional_info"
                    android:padding="10dp" />

            </LinearLayout>

            <Button
                android:id="@+id/btFinish"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimary"
                android:text="@string/custommer_finish"
                android:textColor="#fff"
                android:textSize="30dp" />

        </RelativeLayout>


    </ScrollView>

</RelativeLayout>



