<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/actionbar"
        layout="@layout/layout_actionbar_normal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actionbar"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff">


            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fb824e"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/custommer_desc"
                android:textColor="#fff"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btFinish"
                android:layout_below="@+id/tvDesc"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/custommer_need_to_be_enter"
                    android:textStyle="bold" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#f00">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:background="#fff"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/custommer_title" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="5dp"
                                android:text="@string/custommer_gender"
                                android:textStyle="bold" />

                            <Spinner
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:padding="20dp">

                            </Spinner>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="5dp"
                                android:text="@string/custommer_name"
                                android:textStyle="bold" />

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:padding="10dp">

                            </EditText>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="5dp"
                                android:text="@string/custommer_go"
                                android:textStyle="bold" />

                            <Spinner
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:padding="20dp">

                            </Spinner>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="5dp"
                                android:text="@string/custommer_back"
                                android:textStyle="bold" />

                            <Spinner
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:padding="20dp">

                            </Spinner>

                        </LinearLayout>


                    </LinearLayout>

                </FrameLayout>


            </LinearLayout>

            <Button
                android:id="@+id/btFinish"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimary"
                android:text="@string/custommer_finish"
                android:textColor="#fff"
                android:textSize="30dp" />

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>



