<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#fb824e"
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        android:text="@string/sort"
        android:textSize="20sp"
        android:textColor="#fff"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:id="@+id/llTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/time" />

        <RadioButton
            android:id="@+id/rbTime"
            android:layout_width="30dp"
            android:layout_height="30dp" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="#000" />

    <LinearLayout
        android:id="@+id/llPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/price" />

        <RadioButton
            android:id="@+id/rbPrice"
            android:layout_width="30dp"
            android:layout_height="30dp" />


    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#fb824e"
        android:gravity="center_vertical"
        android:text="@string/filter"
        android:textColor="#fff"
        android:textSize="20sp"
        android:paddingLeft="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="3"
        android:scrollbars="none"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />

</LinearLayout>
