<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/actionbar"
        layout="@layout/layout_actionbar_normal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/actionbar"
        android:layout_margin="5dp"
        android:background="@color/graylight"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleInternational"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/international"
                android:textColor="@color/homeTextColor"
                android:textSize="25sp"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/autoComplete"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/titleInternational"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_border"
                android:ems="10"
                android:hint="@string/codeOrName"
                android:paddingLeft="5dp">

                <requestFocus />
            </AutoCompleteTextView>

            <TextView
                android:id="@+id/titleSouth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/autoComplete"
                android:layout_marginTop="10dp"
                android:text="@string/south"
                android:textColor="@color/homeTextColor"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llSouth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleSouth"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_border_fill_gray_light"
                android:orientation="vertical"
                android:padding="2dp">

            </LinearLayout>

            <TextView
                android:id="@+id/titleNorth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llSouth"
                android:layout_marginTop="10dp"
                android:text="@string/north"
                android:textColor="@color/homeTextColor"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llNorth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleNorth"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_border_fill_gray_light"
                android:orientation="vertical"
                android:padding="2dp">

            </LinearLayout>

            <TextView
                android:id="@+id/titleMiddle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llNorth"
                android:layout_marginTop="10dp"
                android:text="@string/middle"
                android:textColor="@color/homeTextColor"
                android:textSize="25sp"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/llMiddle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleMiddle"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_border_fill_gray_light"
                android:orientation="vertical"
                android:padding="2dp">


            </LinearLayout>

        </RelativeLayout>


    </ScrollView>


</RelativeLayout>
