<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include
        android:id="@+id/actionbar"
        layout="@layout/layout_actionbar_normal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionbar"
        android:padding="5dp">

        <TextView
            android:id="@+id/textCustommerCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/custommer_code"
            android:textColor="#3d90c2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCustommerCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/textCustommerCode"
            android:text="105509"
            android:textColor="#e90a02" />

        <TextView
            android:id="@+id/textWayToPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textCustommerCode"
            android:layout_marginTop="5dp"
            android:text="@string/way_to_pay"
            android:textColor="#3d90c2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvWayToPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textCustommerCode"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/textWayToPay"
            android:text="Bank"
            android:textColor="#e90a02" />

        <TextView
            android:id="@+id/textStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textWayToPay"
            android:layout_marginTop="5dp"
            android:text="@string/status"
            android:textColor="#3d90c2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textWayToPay"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/textStatus"
            android:text="Chưa thanh toán"
            android:textColor="#e90a02" />

        <TextView
            android:id="@+id/textDeadlinePay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textStatus"
            android:layout_marginTop="5dp"
            android:text="@string/deadline_to_pay"
            android:textColor="#3d90c2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDeadlineToPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textStatus"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/textDeadlinePay"
            android:text="19:01 09/02/2016"
            android:textColor="#e90a02" />

        <TextView
            android:id="@+id/textBriefTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textDeadlinePay"
            android:layout_marginTop="5dp"
            android:text="@string/brief_ticket"
            android:textColor="#3d90c2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvBriefTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textBriefTicket"
            android:layout_marginTop="5dp"
            android:text="These code examples were ranked by Codota’s semantic indexing as the best open source examples for Android\nThese code examples were ranked by Codota’s semantic indexing as the best open source examples for Android"
            android:textColor="#e90a02" />

    </RelativeLayout>

</RelativeLayout>